--- a/css/main.css
+++ b/css/main.css
@@ -5,10 +5,23 @@
   list-style: none;
   box-sizing: border-box;
 }
+html{
+  width: 100%;
+  overflow-x: hidden;
+  min-height: 100%;
+  background-color: #2F2828;
+  font-family: Arial, Helvetica, sans-serif;
+}
+body section div img{
+  width: 100%;
+  color: lightgrey;
+}
 body{
-  font-family: Los Feliz Ot;
-  background-color: white;
-  color: black;
+  color: lightgrey; 
+}
+
+main{
+  font-size: 20pt;
 }
 nav{
   background: #2F2828;
@@ -39,6 +52,8 @@ nav ul li a{
   border-radius: 3px;
   text-transform: uppercase;
 }
+
+
 a.active,a:hover{
   color: grey;
   transition: .5s;
@@ -55,6 +70,21 @@ a.active,a:hover{
 #check{
   display: none;
 }
+
+section div.images{
+  margin: 10em 4em;
+  position: relative;
+}
+div.images .caption{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  padding: 80px; 40px;
+  text-shadow: 0 0 2px black;
+  border: white;
+}
+ 
+
 @media (max-width: 952px){
   label.logo{
     font-size: 30px;
@@ -191,5 +221,7 @@ a.active,a:hover{
 }
 
 .home-page-images{
-  color: black;
+  color: lightgrey;
  }
+
+
